@@ -1,5 +1,10 @@
 2007-12-19  Hubert Figuiere  <hub@figuiere.net>
 
+	* public/include/TXMPMeta.hpp, public/include/client-glue/TXMPMeta.incl_cpp,
+	samples/source/XMPCoreCoverage.cpp, 
+	source/XMPFiles/FormatSupport/ReconcileTIFF.cpp:
+	Some APIs use long and long long. Change that.
+
 	* source/XMPFiles/FormatSupport/TIFF_FileWriter.cpp, exempi/tests/*: 
 	Fix a memory leak. See http://www.adobeforums.com/webx/.3bc42b73
 	And test case.
